kubernetes/development.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: faraday-dev

# ConfigMap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faraday-app
  namespace: faraday-dev
spec:
  selector:
    matchLabels:
      app: faraday-app
  template:
    metadata:
      labels:
        app: faraday-app
    spec:
      containers:
        - name: faraday
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:app-${GH_RUN_NUMBER}
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4Gi"
              cpu: "500m"
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: faraday-app-service
  namespace: faraday-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: faraday-app
---

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faraday-app-ingress
  namespace: faraday-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: faraday.dev.inl.gov
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faraday-app-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: faraday-server-service
                port:
                  number: 8000
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: faraday-server-service
                port:
                  number: 8000

# SERVER
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faraday-server
  namespace: faraday-dev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: faraday-server
  template:
    metadata:
      labels:
        app: faraday-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: faraday-cm
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:server-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          name: faraday-server
          args:
            - /bin/sh
            - -c
            - ./entrypoint.prod.sh
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1"
              memory: "4Gi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: faraday-dev
  name: faraday-server-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: api
      port: 8000
      targetPort: 8000
  selector:
    app: faraday-server
---


# DATABASE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: faraday-dev
  labels:
    app: faraday-db
  name: faraday-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: faraday-db
  template:
    metadata:
      labels:
        app: faraday-db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: faraday-cm
          image: ${CI_REGISTRY}/${CI_REGISTRY_PATH}:db-${GITHUB_RUN_NUMBER}
          imagePullPolicy: Always
          name: faraday-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: faraday-pv
          resources:
            limits:
              cpu: "250m"
              memory: "1024M"
      restartPolicy: Always
      volumes:
        - name: faraday-pv
          persistentVolumeClaim:
            claimName: faraday-pvc
---

---
apiVersion: v1
kind: Service
metadata:
  namespace: faraday-dev
  labels:
    app: faraday-db
  name: faraday-db-service
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: faraday-db
---
